--- a/index.html
+++ b/index.html
@@ -1,3 +1,87 @@
-<h1>traffic_accident_blog</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>wooyoung's traffic accident blog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      font-family: sans-serif;
+    }
+    #viewer {
+      width: 90%;
+      height: 85vh;
+      border: 1px solid #ccc;
+      margin-top: 20px;
+    }
+  .form-check {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
+  .col-md-3 {
+      padding-right: 0;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>교통 안전 사고 분석</h1>
+    <p>교통, 안전, 사고 관련 데이터 분석 시각화 샘플</p>
 
-<p style="color: green;">servering testing"</p>
+    <h2>교통 안전 사고 분석</h2>
+    <div class="row">
+      <div class="col-md-3">
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="view" value="accident_map.html" id="radio1" checked>
+          <label class="form-check-label" for="radio1">
+            1. 사고 유형별 분포 분석
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="view" value="accident_risk_map.html" id="radio2">
+          <label class="form-check-label" for="radio2">
+            2. 사고 지역 열차트 분석
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="view" value="taxi_groupping.html" id="radio3">
+          <label class="form-check-label" for="radio3">
+            3. 택시 영업데이터 분석 군집 분석
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="view" value="traffic_od.html" id="radio4">
+          <label class="form-check-label" for="radio4">
+            4. 대중교통 OD 분석 시각화
+          </label>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div id="viewer">
+          <p>Please wait...</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const radios = document.querySelectorAll('input[type="radio"]');
+    const viewer = document.getElementById('viewer');
+
+    radios.forEach(radio => {
+      radio.addEventListener('change', () => {
+        viewer.innerHTML = '<p>Please wait...</p>';
+
+        const selectedHtml = radio.value;
+
+        if (selectedHtml) {
+          fetch(selectedHtml)
+          .then(response => response.text())
+          .then(html => {
+              viewer.innerHTML = html;
+            });
+        }
+      });
+    });
+  </script>
+</body>
+</html>
